example/SyntaxError/multipleserror.ada
with Ada.Text_IO;
 Ada.Text_IO;

 Main
   A, B, C, D, E : Integer;
begin
   A := 3;
   B  4;
   C := ;
   D := A + B * C
   E := (A + B) * C;
    put(A);
end Main;
